# ModelEditor

./: .gitignore  CMakeLists.txt  README.md  conanBuild.ps1  conanfile.txt
include/: CommandGroup.h
include/Core/: BackgroundNode.h  Camera.h  Compilable.h  DynamicState.h  Exports.h  Frame.h  FrameManager.h  GridNode.h  Image.h  Material.h  Mesh.h  MeshNode.h  Node.h  NodeManager.h  NodeTree.h  Pipeline.h  PipelineManager.h  Scene.h  SceneManager.h  SkyboxNode.h  pch.h
include/Core/Commands/: BindBufferCommand.h  BindDescriptorSetsCommand.h  BindPipelineCommand.h  Command.h  CommandGroup.h  DrawCommand.h  SetPolygonModeCommand.h  SetScissorCommand.h  SetViewportCommand.h
include/Core/Pipeline/: PipelineCreateInfo.h
include/Core/RenderingContextDriver/: Commons.h  InitInfo.h  RenderingContextDriver.h
include/Core/Shader/: Descriptor.h  Shader.h  ShaderManager.h
include/Editor/: MainWindow.h  NodeListModel.h  OutlinerDockWidget.h  VulkanWindow.h  pch.h
include/IO/: Exports.h  ReadImage.h  ReadNode.h  pch.h
include/Nodes/: Exports.h  Mesh.h  Node.h  NodeManager.h
include/RenderingContextDriver/: Commons.h  Exports.h  Frame.h  FrameManager.h  InitInfo.h  PipelineManager.h  RenderingContextDriver.h
include/VulkanContext/: BufferManager.h  Command.h  CommandManager.h  CommandPool.h  DebugUtilsMessenger.h  DescriptorPool.h  DescriptorSetLayout.h  DrawCommand.h  Exports.h  Frame.h  FrameManager.h  Image.h  InitInfo.h  Instance.h  LogicalDevice.h  PhysicalDevice.h  Pipeline.h  PipelineCommand.h  PipelineManager.h  RenderPass.h  SetScissorCommand.h  SetViewportCommand.h  ShaderManager.h  Surface.h  SwapChain.h  Utils.h  VulkanContext.h  pch.h
src/: CMakeLists.txt
src/Core/: BackgroundNode.cpp  CMakeLists.txt  Camera.cpp  Compilable.cpp  DynamicState.cpp  Frame.cpp  FrameManager.cpp  GridNode.cpp  Image.cpp  Material.cpp  Mesh.cpp  MeshNode.cpp  Node.cpp  NodeManager.cpp  NodeTree.cpp  Pipeline.cpp  PipelineManager.cpp  Scene.cpp  SceneManager.cpp  SkyboxNode.cpp
src/Core/Commands/: BindBufferCommand.cpp  BindDescriptorSetsCommand.cpp  BindPipelineCommand.cpp  CMakeLists.txt  Command.cpp  CommandGroup.cpp  DrawCommand.cpp  SetPolygonModeCommand.cpp  SetScissorCommand.cpp  SetViewportCommand.cpp
src/Core/Pipeline/: CMakeLists.txt  PipelineCreateInfo.cpp
src/Core/RenderingContextDriver/: CMakeLists.txt  InitInfo.cpp  RenderingContextDriver.cpp
src/Core/Shader/: CMakeLists.txt  Descriptor.cpp  Descriptor.h  Shader.cpp  ShaderManager.cpp
src/Editor/: CMakeLists.txt  MainWindow.cpp  MainWindow.ui  MainWindow.ui.autosave  NodeListModel.cpp  VulkanWindow.cpp  main.cpp  outlinerdockwidget.cpp  outlinerdockwidget.ui
src/IO/: CMakeLists.txt  ReadImage.cpp  ReadNode.cpp
src/Nodes/: CMakeLists.txt  Mesh.cpp  MeshNode.cpp  Node.cpp  NodeManager.cpp
src/RenderingContextDriver/: CMakeLists.txt  Frame.cpp  FrameManager.cpp  InitInfo.cpp  PipelineManager.cpp  RenderingContextDriver.cpp
src/VulkanContext/: BufferManager.cpp  CMakeLists.txt  Command.cpp  CommandGroup.cpp  CommandManager.cpp  CommandPool.cpp  DebugUtilsMessenger.cpp  DescriptorPool.cpp  DescriptorSetLayout.cpp  DrawCommand.cpp  Frame.cpp  FrameManager.cpp  Image.cpp  InitInfo.cpp  Instance.cpp  LogicalDevice.cpp  PhysicalDevice.cpp  Pipeline.cpp  PipelineCommand.cpp  PipelineManager.cpp  RenderPass.cpp  SetScissorCommand.cpp  SetViewportCommand.cpp  ShaderManager.cpp  Surface.cpp  SwapChain.cpp  Utils.cpp  VulkanContext.cpp  background.frag  background.vert  backgroundFrag.spv  backgroundVert.spv  grids.comp  grids.frag  grids.vert  gridsCompute.spv  gridsFrag.spv  gridsVert.spv  pbr.frag  pbr.vert  (+5 more)
