cmake_minimum_required(VERSION 3.22)

project(ModelEditor CXX)
set(CMAKE_CXX_STANDARD 20)

set(MODELEDITOR_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/include)
set(MODELEDITOR_SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/src)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

include_directories(${MODELEDITOR_INCLUDE_DIR})

add_subdirectory(src)