project(RenderingContextDriver CXX)
set(CMAKE_CXX_STANDARD 20)

find_package(glm)

set(RENDERINGCONTEXTDRIVER_INCLUDE_DIR ${MODELEDITOR_INCLUDE_DIR}/${PROJECT_NAME})
set(RENDERINGCONTEXTDRIVER_SRC_DIR ${MODELEDITOR_SRC_DIR}/${PROJECT_NAME})

file(GLOB RENDERINGCONTEXTDRIVER_SOURCES "${RENDERINGCONTEXTDRIVER_SRC_DIR}/*.cpp")
file(GLOB RENDERINGCONTEXTDRIVER_HEADERS "${RENDERINGCONTEXTDRIVER_INCLUDE_DIR}/*.h")

add_library(${PROJECT_NAME} SHARED 
${RENDERINGCONTEXTDRIVER_HEADERS}
${RENDERINGCONTEXTDRIVER_SOURCES}
)

target_link_libraries(${PROJECT_NAME} PUBLIC
    glm::glm
)

add_compile_definitions(RENDERINGCONTEXTDRIVER_EXPORT)

install(TARGETS ${PROJECT_NAME}
    BUNDLE  DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_LIBDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)